AnchorLinkList: refractor code

--- a/FY19/Views/Shared/PageTemplates/KMJ_CatalogDownloadView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_CatalogDownloadView.cshtml
@@ -308,8 +308,8 @@
                                     <p>印刷工程の自動化でオペレーションを効率化させるデジタル印刷システムのフラッグシップモデル</p>
                                 </li>
                                 <!--<li><p><a href="/business/products/graphic/ondemand_print/color/accurio_press_c2070_c2070p_c2060/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_072.jpg" width="155" height="110" alt=""><span>AccurioPress C2070 / C2070P / C2060</span></a></p>
-                                <p>進化し続けるマルチロールプロダクション印刷システム「AccurioPress C2070 / C2070P / C2060」</p></li><li><p><a href="/business/products/copiers/bw/bizhub_558_458_368_308/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_065.jpg" width="155" height="110" alt=""><span>bizhub 558 / 458 / 368 / 308</span></a></p>
-                                <p>快適な環境を構築し、業務効率化をサポートする「bizhub 558 / 458 / 368 / 308」</p></li>-->
+                            <p>進化し続けるマルチロールプロダクション印刷システム「AccurioPress C2070 / C2070P / C2060」</p></li><li><p><a href="/business/products/copiers/bw/bizhub_558_458_368_308/index.html"><img src="https://www.konicaminolta.jp/business/common/img/megamenu/img_065.jpg" width="155" height="110" alt=""><span>bizhub 558 / 458 / 368 / 308</span></a></p>
+                            <p>快適な環境を構築し、業務効率化をサポートする「bizhub 558 / 458 / 368 / 308」</p></li>-->
                             </ul>
                             <!-- / .colR -->
                         </div>
@@ -495,19 +495,19 @@
                             <ul>
                                 <li><a href="/business/service/it-guardians/index.html">TOP</a></li>
                                 <!--
-                                -->
+                            -->
                                 <li><a href="/business/service/it-guardians/index.html#itg-solution">課題解決</a></li>
                                 <!--
-                                -->
+                            -->
                                 <li><a href="/business/service/it-guardians/helpdesk/index.html">ヘルプデスク</a></li>
                                 <!--
-                                -->
+                            -->
                                 <li><a href="/business/service/it-guardians/service/index.html">サービス一覧</a></li>
                                 <!--
-                                -->
+                            -->
                                 <li><span>ニュース</span></li>
                                 <!--
-                                -->
+                            -->
                                 <li><a href="https://bsoffers.konicaminolta.jp/fm-it-guardians-contact.html" target="_blank">お問い合わせ</a></li>
                             </ul>
                         </nav>
@@ -647,7 +647,11 @@
 
             theForm.oldOnSubmit = theForm.onsubmit;
             theForm.onsubmit = WebForm_SaveScrollPositionOnSubmit;
-//]]>
+            //]]>
+        </script>
+
+        <script type="text/javascript">
+            document.getElementsByClassName("catalog-row__col")[0].parentElement.className = "catalog-row mt-lg-100 mb-lg-100";
         </script>
     </form>
     <script src="https://cdn.ckeditor.com/4.11.4/full-all/ckeditor.js"></script>
