--- a/FY19/Views/Shared/Widgets/AnnotationListView.cshtml
+++ b/FY19/Views/Shared/Widgets/AnnotationListView.cshtml
@@ -120,7 +120,36 @@
     else { text10 = Model.Properties.Text10; }
 }
 
-<div class="KMJ_AnnotationList">
+
+@if (Context.Kentico().PageBuilder().EditMode)
+{
+    <div class="KMJ_AnnotationList">
+        <ul class="@leftFootClass @if (Model.Properties.Id != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">
+            @if (text1 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text1.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text2 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text2.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text3 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text3.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text4 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text4.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text5 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text5.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text6 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text6.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text7 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text7.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text8 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text8.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text9 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text9.Replace(Environment.NewLine, "<br/>")))</li>}
+            @if (text10 != null)
+            {<li>@Html.Raw(HttpUtility.HtmlDecode(text10.Replace(Environment.NewLine, "<br/>")))</li>}
+        </ul>
+    </div>
+}
+else
+{
     <ul class="@leftFootClass @if (Model.Properties.Id != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">
         @if (text1 != null)
         {<li>@Html.Raw(HttpUtility.HtmlDecode(text1.Replace(Environment.NewLine, "<br/>")))</li>}
@@ -143,4 +172,4 @@
         @if (text10 != null)
         {<li>@Html.Raw(HttpUtility.HtmlDecode(text10.Replace(Environment.NewLine, "<br/>")))</li>}
     </ul>
-</div>
+}
