--- a/FY19/Views/Shared/Widgets/BodyTextView.cshtml
+++ b/FY19/Views/Shared/Widgets/BodyTextView.cshtml
@@ -37,6 +37,14 @@
     { bodyText = HtmlToPlainText(Model.Properties.TextContent); }
 }
 
-<div class="KMJ_TextContent">
+
+@if (Context.Kentico().PageBuilder().EditMode)
+{
+    <div class="KMJ_TextContent">
+        <p class="textRead @if (Model.Properties.Id != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">@Html.Raw(HttpUtility.HtmlDecode(bodyText.Replace(Environment.NewLine, "<br/>")))</p>
+    </div>
+}
+else
+{
     <p class="textRead @if (Model.Properties.Id != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">@Html.Raw(HttpUtility.HtmlDecode(bodyText.Replace(Environment.NewLine, "<br/>")))</p>
-</div>    
+}
