--- a/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
+++ b/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
@@ -70,7 +70,21 @@
     }
 }
 
-<div class="KMJ_DownloadItem">
+
+@if (Context.Kentico().PageBuilder().EditMode)
+{
+    <div class="KMJ_DownloadItem">
+        <div class="catalog-row__col">
+            <a @url class="catalog-row__col__img @if(Model.Properties.NewIcon == "display"){ @newIcon } " @tBlank><img src="@imgSrc" alt="" class="center-block img-responsive"></a>
+            <p class="catalog-row__col__ttl">@Model.Properties.Title</p>
+            <p class="catalog-row__col__txt">@Html.Raw(HttpUtility.HtmlDecode(contentText.Replace(Environment.NewLine, "<br/>")))</p>
+            <p class="catalog-row__col__btn"><a @url @tBlank>ダウンロードはこちら</a></p>
+            <!--/catalog-row__col-->
+        </div>
+    </div>
+}
+else
+{
     <div class="catalog-row__col">
         <a @url class="catalog-row__col__img @if(Model.Properties.NewIcon == "display"){ @newIcon } " @tBlank><img src="@imgSrc" alt="" class="center-block img-responsive"></a>
         <p class="catalog-row__col__ttl">@Model.Properties.Title</p>
@@ -78,4 +92,4 @@
         <p class="catalog-row__col__btn"><a @url @tBlank>ダウンロードはこちら</a></p>
         <!--/catalog-row__col-->
     </div>
-</div>
+}
