--- a/FY19/Views/Shared/PageTemplates/KMJ_GenericPageView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_GenericPageView.cshtml
@@ -467,22 +467,7 @@
 
                         @Html.Kentico().EditableArea("ContentZone",
                                                     defaultSectionIdentifier: null,
-                                                    allowedWidgets: new[] { "FY19.Image",
-                                                                            "FY19.H2Header",
-                                                                            "FY19.H3Header",
-                                                                            "FY19.H4Header",
-                                                                            "FY19.BodyText",
-                                                                            "FY19.StaticText",
-                                                                            "FY19.AnnotationList",
-                                                                            "FY19.LinkList",
-                                                                            "FY19.BreadCrumbs",
-                                                                            "FY19.List",
-                                                                            "FY19.AnchorList",
-                                                                            "FY19.LinkButton",
-                                                                            "FY19.HeadHTML",
-                                                                            "FY19.FreeHTML",
-                                                                            "FY19.Table",
-                                                                            "FY19.Placeholder"})
+                                                    allowedWidgets: new[] { "FY19.FreeHTML" })
 
                         <div class="footer-btn">
                             <div class="footer-btn__wrapper">
